# 06_LayoutLM

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  ocr-layoutlmv3-base-v2.ipynb  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
api/: server.py  test_api.py
api/routes/: export.py  health.py  process.py
api/schemas/: request.py  response.py
core/: __init__.py  example_usage.py  test_complete_system.py
core/model/: __init__.py  inference.py  loader.py  postprocess.py  test_model.py
core/ocr/: __init__.py  base.py  easyocr_engine.py  test_ocr.py
core/pipeline/: __init__.py  document_processor.py  export.py  image_utils.py  test_pipeline.py
data/expected/: sample_form.json
data/samples/: .gitkeep
infrastructure/: __init__.py  exceptions.py  hardware_detection.py  logger_utils.py
scripts/: benchmark.py  convert_notebook.py  download_models.py
tests/: conftest.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_config.py  test_export.py  test_image_utils.py  test_postprocess.py  test_schemas.py
ui/: gradio_app.py
